Fix navigation appearance on smaller screens

--- a/assets/theme.default.css
+++ b/assets/theme.default.css
@@ -54,11 +54,18 @@ footer {
 }
 
 #page-header-inner {
+  transition: margin-bottom 250ms;
   margin-bottom: -18px;
 }
 
 #page-header-logo {
   height: 40px;
+}
+
+@media screen and (max-width: 768px) {
+  #page-header-inner {
+    margin-bottom: 0;
+  }
 }
 
 /* ::::: Navigation ::::: */
@@ -77,7 +84,7 @@ footer {
   font-weight: bold;
   text-decoration: none;
   border-radius: 8px 8px 0 0;
-  margin-left: 1px;
+  margin: 0 0 1px 1px;
 }
 
 #page-nav ul > li a:focus,
